# mosium

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  func.md
src/: CHANGELOG.md  main.rs  meta.rs  opts.rs  util.rs
src/comparer/: boring.rs  mod.rs
src/composing/: decode.rs  mod.rs
src/decoding/: files.rs  mod.rs  split.rs  tiles.rs
src/mapping/: alltoall.rs  mod.rs  simplemal.rs
src/puzzler/: alltoall.rs  mod.rs  simplemal.rs
src/puzzling/: mod.rs
src/scaler/: mod.rs
src/tiles/: dest_tile.rs  mod.rs  src_tile.rs
