[package]
name = "mosion"
version = "0.1.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.2"
image = "0.22"
async-std = "1.0"
itertools = "0.8"
num-rational = "0.2"
lab = "0.7"
rayon = "1.2"