[package]
name = "mosion"
version = "0.2.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
image = "0.23"
async-std = "1"
itertools = "0.10"
num-rational = "0.4"
lab = "0"
rayon = "1"
clap = "2"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
